--- a/src/pages/searchPage.css
+++ b/src/pages/searchPage.css
@@ -1,30 +1,29 @@
-.searchcontainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
+.searchcontainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
 }
 
-.header{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: 2rem;
-
+.header {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 2rem;
 }
 
-.header>h1{
-    padding: 0;
-    margin: 0;
-    font-family:sans-serif;
-    font-size:2.5rem
+.header > h1 {
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
+  font-size: 2.5rem;
 }
 
-.header>h3{
-    padding: 0;
-    margin: 0;
-    font-size: 1.5rem;
-    font-weight:normal;
-    font-family: 'Open Sans', sans-serif;
+.header > h3 {
+  padding: 0;
+  margin: 0;
+  font-size: 1.5rem;
+  font-weight: normal;
+  font-family: "Open Sans", sans-serif;
 }
